WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
199949
[iOS] Entering 2FA code on idmsa.apple.com causes unexpected scrolling
https://bugs.webkit.org/show_bug.cgi?id=199949
Summary
[iOS] Entering 2FA code on idmsa.apple.com causes unexpected scrolling
Wenson Hsieh
Reported
2019-07-19 10:35:33 PDT
<
rdar://problem/49944428
>
Attachments
Patch
(14.78 KB, patch)
2019-07-19 11:14 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(14.72 KB, patch)
2019-07-19 11:18 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(14.75 KB, patch)
2019-07-19 11:47 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-07-19 11:14:52 PDT
Created
attachment 374476
[details]
Patch
Wenson Hsieh
Comment 2
2019-07-19 11:17:57 PDT
Comment on
attachment 374476
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374476&action=review
> LayoutTests/fast/forms/ios/no-scrolling-when-moving-focus-between-adjacent-fields.html:48 > + setTimeout(() => testRunner.notifyDone(), 10000);
🧐
Wenson Hsieh
Comment 3
2019-07-19 11:18:17 PDT
Created
attachment 374477
[details]
Patch
Wenson Hsieh
Comment 4
2019-07-19 11:47:13 PDT
Created
attachment 374480
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2019-07-19 12:55:27 PDT
Comment on
attachment 374480
[details]
Patch for landing Clearing flags on attachment: 374480 Committed
r247651
: <
https://trac.webkit.org/changeset/247651
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug